# tiny-grind

./: .env  .gitignore  GRIND.md  README.md  __tptp-auto-convert.py  main.py  output.lean  pyproject.toml  test.py  tptp-auto-convert.py  tptp-convert.py
examples/: 00_imp_refl.lean  01_imp_left.lean  02_modus_ponens.lean  03_imp_transitivity.lean  04_type_identity.lean  05_type_compose.lean  06_type_flip.lean  07_dep_family_identity.lean  08_dep_apply.lean  09_universe_identity.lean  10_k_type.lean  11_s_type.lean  12_apply_twice_type.lean  13_compose_three.lean  14_implication_chain.lean  15_dep_pointwise_eval.lean  16_dep_flip.lean  17_universe_k.lean  18_universe_s.lean  19_universe_dep_identity.lean  20_delta_alias_domain.lean  21_annotation_alpha_id.lean  22_arrow_pi_unused_equiv.lean  23_annotation_type_universe.lean  24_annotation_sort_universe.lean  25_alpha_pi_binders.lean  26_delta_alias_chain.lean  27_dep_pointwise_alias.lean  28_universe_alias_chain.lean  29_function_alias_equiv.lean  30_unicode_forall_identity.lean  31_comment_heavy_imp_chain.lean  32_forall_arrow_equiv_pipeline.lean  33_capture_avoidance_positive.lean  34_annotation_nested_hof.lean  35_dep_family_transport_like.lean  36_universe_alias_multistep.lean  37_prop_currying_uncurrying.lean  38_type_level_combinator_bundle.lean  39_dep_function_relabel_alpha.lean  (+28 more)
examples/should-fail/: f00_unknown_variable.lean  f01_prop_as_function.lean  f02_bad_modus_ponens_input.lean  f03_bad_transitivity_output.lean  f04_bad_type_identity_target.lean  (+49 more)
problems/: __output.lean  lake-manifest.json  lakefile.toml
src/core/: eval.py  (+7 more)
(+76 files in other folders)
